Bug #15682 Incorrect handling of varchar primary keys, when doing filesort
Submitted: 12 Dec 2005 14:50 Modified: 15 Dec 2005 19:50
Reporter: Guy Montreuil
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:5.0.15 OS:Sun Solaris (Solaris 2.8)
Assigned to: Jonas Oreland Target Version:

[12 Dec 2005 14:50] Guy Montreuil
Description:
The following code crashes the NDBD daemon on the node where the query is run:

drop table test;
create table test (f1 varchar(50) primary key, f2 text,f3 int) engine=NDB;
insert into test (f1,f2,f3)VALUES("111111","aaaaaa",1);
insert into test (f1,f2,f3)VALUES("222222","bbbbbb",2);
select * from test order by f1;

the errro message is:
Node 2: Forced node shutdown completed. Initiated by signal 0. Caused by error 2341:
'Internal program error (failed ndbrequire)(Internal error, programming error or missing
error message, please report a bug). Temporary error, restart node'.
show

How to repeat:
A cluster with 2 nodes (in my case 2 Solaris running 2.8) and a mgm node.  run the
following code:

drop table test;
create table test (f1 varchar(50) primary key, f2 text,f3 int) engine=NDB;
insert into test (f1,f2,f3)VALUES("111111","aaaaaa",1);
insert into test (f1,f2,f3)VALUES("222222","bbbbbb",2);
select * from test order by f1;

from one of the clustered node.  This will crashed the ndbd daemon with the error
message:
Node 2: Forced node shutdown completed. Initiated by signal 0. Caused by error 2341:
'Internal program error (failed ndbrequire)(Internal error, programming error or missing
error message, please report a bug). Temporary error, restart node'.
show
[12 Dec 2005 15:02] Valeriy Kravchuk
Thank you for a problem report. Please, send your mysql configuration file and cluster
configuration file. Are there anything else unusual in the nodes error logs?

There are bug reports that looks similar: 

http://bugs.mysql.com/bug.php?id=14828
http://bugs.mysql.com/bug.php?id=14966

Please, check them.

Can you try to install 5.0.16 cluster?
[12 Dec 2005 16:41] Guy Montreuil
config.ini and my.cnf files

Attachment: file.tar.gz (application/x-gzip-compressed, text), 2.51 KiB.

[12 Dec 2005 16:44] Guy Montreuil
ndb_error, ndb_out, ndb_trace

Attachment: ndb_files.tar.gz (application/x-gzip-compressed, text), 47.68 KiB.

[12 Dec 2005 16:45] Guy Montreuil
Added all the config and log files for the problem.

Thanks,
[13 Dec 2005 13:31] Guy Montreuil
Some additional info:

if I don't have a primary key then there is no problem I can do order by.  
If I have a primary key then I can do select as long as I don't user order by

When bith are there then crash.  even if I do order by another field than primary key.

Thanks,
[14 Dec 2005 10:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/33238
[14 Dec 2005 14:25] Jonas Oreland
Pushed into 5.0.18
[14 Dec 2005 15:06] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/33244
[14 Dec 2005 16:59] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented fix in 5.0.18 changelog.
[14 Dec 2005 17:01] Jonas Oreland
Sorry jon,

I also pushed this into 5.0.17
[15 Dec 2005 12:56] Jon Stephens
Documented fix in 5.0.17 and 5.1.4 changelogs.
[15 Dec 2005 19:50] Guy Montreuil
Hello,

When is 5.0.17 be out?  Not sure if I should wait or build 5.0.16 with the patch???

Thanks,
[18 Jan 2006 10:13] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/33358