ndb/src/kernel/vm/SimulatedBlock.cpp
@@ -1890,7 +1890,10 @@ SimulatedBlock::xfrm_key(Uint32 tab, const Uint32* src,
 	AttributeDescriptor::getType(keyAttr.attributeDescriptor);
       Uint32 lb, len;
       bool ok = NdbSqlUtil::get_var_length(typeId, srcPtr, srcBytes, lb, len);
-      ndbrequire(ok);
+      if (unlikely(!ok))
+      {
+	return 0;
+      }
       Uint32 xmul = cs->strxfrm_multiply;
       if (xmul == 0)
 	xmul = 1;
@@ -1902,7 +1905,10 @@ SimulatedBlock::xfrm_key(Uint32 tab, const Uint32* src,
       Uint32 dstLen = xmul * (srcBytes - lb);
       ndbrequire(dstLen <= ((dstSize - dstPos) << 2));
       int n = NdbSqlUtil::strnxfrm_bug7284(cs, dstPtr, dstLen, srcPtr + lb, len);
-      ndbrequire(n != -1);
+      if (unlikely(n == -1))
+      {
+	return 0;
+      }
       while ((n & 3) != 0) 
       {
 	dstPtr[n++] = 0;
